Updated Configuration pour DukeScript (markdown)